ChangeLog

Name: William Lai
Date: 12-24-2013
Description: Bug fix
    * src/chess/ComputerPlayer.java: In static evaluation, check for game-ending conditions again (since bitboards make those operations faster), which prevents a bug that allows AI to make moves that leave the king in check.
    * src/chess/StandardChessGame.java: Added main method so that project can be run as an application and exported as a runnable JAR file (in addition to being able to be run as an applet).

Name: William Lai
Date: 12-24-2013
Description: Bug fixes
    * src/chess/ComputerPlayer.java: Rolled back check extensions (for speed considerations) and fixed bug that made illegal moves in the AI evaluation (using hash moves that weren't legal).
    * src/chess/StandardChessGame.java: Fixed bug that would end game if the first player gave check (credit to Eric (edu5) for finding bug).

Name: William Lai
Date: 12-23-2013
Description: Slight improvement to Check Extension
     * src/chess/ComputerPlayer.java: Slight improvement to check extension by only counting check escapes after the first one

Name: William Lai
Date: 12-23-2013
Description: AI extensions, pop-up message at end of game
     * src/chess/ComputerPlayer.java: Now properly implements extensions when a player moves out of check, and when an equal or better capture is made
     * src/chess/Definitions.java: Added more helper functions for move generation
     * src/StandardChessBoard.java: Implemented toString function
     * src/StandardChessGame.java: Now pops up message at end of game instead of trying to write to window

Name: William Lai
Date: 12-23-2013
Description: Bug fixes
    * src/chess/HumanPlayer.java: Fixed bug that made it impossible for player to make a capture.
    * src/chess/StandardChessBoard.java: Fixed bug that made it possible for a pawn to move two squares if a friendly pawn is threatening the same square (credit to Eric (edu5) for finding bug).

Name: William Lai
Date: 12-23-2013